# quick-fea

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: lib.rs
src/analysis/: mod.rs
src/api/: mod.rs
src/elements/: frame.rs  mod.rs
src/models/: frame.rs  node.rs
src/types/: frame.rs  material.rs  mod.rs  node.rs
src/utils/: mod.rs  transform.rs
