[package]
authors = ["Luke Minnich <squareman2357@gmail.com>"]
description = "A modern finite element library for structural analysis written entirely in Rust"
edition = "2018"
license = "MIT"
name = "quick-fea"
repository = "https://github.com/LukeMinnich/quick-fea.git"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
approx = {version = "0.3.2"}
lazy_static = {version = "1.4"}
nalgebra = {version = "0.22", features = ["serde-serialize"]}
prost = {version = "0.6"}
quick-fea-types = {path = "types/rust/"}
serde = {version = "1.0", features = ["derive"]}
sparse21 = {version = "0.2"}
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
