[package]
authors = ["Luke Minnich <squareman2357@gmail.com>"]
description = "A modern finite element library for structural analysis written entirely in Rust."
edition = "2018"
license = "MIT"
name = "quick-fea"
repository = "https://github.com/LukeMinnich/quick-fea.git"
version = "0.1.0"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
approx = {version = "0.3.2"}
lazy_static = {version = "1.4"}
nalgebra = {version = "0.22", features = ["serde-serialize"]}
prost = {version = "0.6"}
quick-fea-types = {path = "types/rust/"}
serde = {version = "1.0", features = ["derive"]}
sparse21 = {version = "0.2"}
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1", optional = true}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = {version = "0.4", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
